<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.9">
  <DUT Name="ST_BasicCommand" Id="{e852155f-a12c-4f3a-a110-629ca4aa8259}">
    <Declaration><![CDATA[TYPE ST_BasicCommand :
STRUCT
	stCmd		: ST_CommandControl;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>