<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.9">
  <DUT Name="ST_CommandControl" Id="{56a7eb90-f079-4eb9-a4a9-603e42631cff}">
    <Declaration><![CDATA[TYPE ST_CommandControl :
STRUCT
	bExecute		: BOOL;		// Wird von PCS gesetzt um die Ausführung zu starten; zurücksetzen bricht die Ausführung ab
	bBusy			: BOOL;		// Anzeige, dass die Ausführung in der SPS läuft
	nResultCode		: UINT;		// Resultat der letzten Ausführung (bExecute & bBusy = FALSE)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>