<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.9">
  <GVL Name="Commands" Id="{75e95b76-451e-476e-86cf-c478be106f96}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	stAddCommand		: ST_AddCommand;
	stAddLongCommand	: ST_AddCommand;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>